Enable no_fp8_weight_transpose_cache: true

--- a/examples/megatron_bridge/configs/MI355X/llama2_70b_lora_posttrain.yaml
+++ b/examples/megatron_bridge/configs/MI355X/llama2_70b_lora_posttrain.yaml
@@ -58,6 +58,8 @@ modules:
       precision_config: bf16_with_fp8_hybrid
       comm_overlap_config: null
 
+      no_fp8_weight_transpose_cache: true
+
       # TensorBoard logging
       # tensorboard_dir: /workspace/Primus/tensorboard
       # tensorboard_log_interval: 1
