--- a/primus/configs/models/megatron/deepseek_v3.yaml
+++ b/primus/configs/models/megatron/deepseek_v3.yaml
@@ -13,6 +13,7 @@ hidden_size: 7168
 ffn_hidden_size: 18432
 num_attention_heads: 128
 # mla
+multi_latent_attention: true
 q_lora_rank: 1536
 kv_lora_rank: 512
 qk_head_dim: 128
@@ -26,9 +27,12 @@ mtp_loss_scaling_factor: 0.1
 moe_layer_freq: "([0]*3+[1]*58)"
 num_experts: 256
 moe_router_topk: 8
-# num_shared_experts: 1
+num_shared_experts: 1
 moe_ffn_hidden_size: 2048
 moe_shared_expert_intermediate_size: 2048 # num_shared_experts * moe_ffn_hidden_size
+
+# vocabulary (from CSV)
+padded_vocab_size: 163840
 
 # device limited routing
 expert_model_parallel_size: 8
