--- a/.github/workflows/docker/Dockerfile
+++ b/.github/workflows/docker/Dockerfile
@@ -66,7 +66,7 @@ RUN cd /opt && \
     git clone https://github.com/uccl-project/uccl.git && \
     cd uccl && \
     git checkout ${UCCL_COMMIT} && \
-    cd ep && TORCH_CUDA_ARCH_LIST="gfx942;gfx950" python3 setup.py build && cd .. && \
+    cd ep && TORCH_CUDA_ARCH_LIST="gfx942,gfx950" python3 setup.py build && cd .. && \
     cp ep/build/**/*.so uccl && \
     pip3 install --no-build-isolation . -v && \
     cd ep/deep_ep_wrapper && pip3 install --no-build-isolation . -v
