update config for deepseek models

--- a/examples/megatron/configs/MI355X/deepseek_v2-BF16-pretrain.yaml
+++ b/examples/megatron/configs/MI355X/deepseek_v2-BF16-pretrain.yaml
@@ -13,6 +13,7 @@ modules:
     overrides:
       # log
       wandb_project: "Primus_DeepSeek_Pretrain"
+      wandb_disable: false
       stderr_sink_level: DEBUG
 
       # debug
