--- a/examples/maxtext/configs/MI355X/mixtral_8x7B-pretrain.yaml
+++ b/examples/maxtext/configs/MI355X/mixtral_8x7B-pretrain.yaml
@@ -38,5 +38,5 @@ modules:
       megablox: false
       capacity_factor: 1
       max_target_length: 4096
-      per_device_batch_size: 12
-      remat_policy: "minimal"
+      per_device_batch_size: 11
+      remat_policy: "save_dot_with_context_except_mlp"
