fix(projection): improve performance projection accuracy for MoE and PP models, fix MoE configs and license headers
1. MoE-aware gradient AllReduce estimation
   - Separate expert vs non-expert parameter counting for AR sizing
   - Expert params sharded by EP, non-expert params replicated
   - Gradient AR overlapped with backward at 0.63 overlap ratio
   - Per-iteration AR timing instead of per-microbatch

2. Correct microbatch count for pipeline simulation
   - Pipeline sim uses target_dp (not benchmark_dp) to compute
     microbatch count: global_batch / (micro_batch * target_dp)

3. Shared-expert-aware EP compute scaling
   - New _compute_ep_mlp_scale() accounts for shared experts that
     don't scale with EP (scale = shared_frac + routed_frac * ratio)
   - Derives num_shared_experts from moe_shared_expert_intermediate_size
     when not directly available on model config

4. Remove DP double-counting for pipeline simulation path
   - Pipeline sim already uses target_dp microbatches, so no further
     DP scaling should be applied to the result

5. Flow decoder_first/last_pipeline_num_layers through to pipeline sim
   - Add fields to ModelParallelConfig dataclass so they are populated
     from CLI args via update_config_from_args()
   - _build_chunk_time_matrix now passes these to get_layers_for_rank()
     for correct non-uniform stage assignment (e.g. DSv3 [8,8,8,8,8,8,8,5])

6. Fix MoE configs and move license headers to top of all Python files

--- a/primus/configs/models/megatron/deepseek_v3.yaml
+++ b/primus/configs/models/megatron/deepseek_v3.yaml
@@ -13,7 +13,6 @@ hidden_size: 7168
 ffn_hidden_size: 18432
 num_attention_heads: 128
 # mla
-multi_latent_attention: true
 q_lora_rank: 1536
 kv_lora_rank: 512
 qk_head_dim: 128
@@ -27,7 +26,7 @@ mtp_loss_scaling_factor: 0.1
 moe_layer_freq: "([0]*3+[1]*58)"
 num_experts: 256
 moe_router_topk: 8
-num_shared_experts: 1
+# num_shared_experts: 1  # Calculated as moe_shared_expert_intermediate_size // moe_ffn_hidden_size
 moe_ffn_hidden_size: 2048
 moe_shared_expert_intermediate_size: 2048 # num_shared_experts * moe_ffn_hidden_size
 
