Update torchtitan batxh size and enable CE fusion

--- a/examples/megatron/configs/MI300X/deepseek_v2_lite-FP8-pretrain.yaml
+++ b/examples/megatron/configs/MI300X/deepseek_v2_lite-FP8-pretrain.yaml
@@ -89,8 +89,8 @@ modules:
       turbo_sync_free_moe_stage: 2
 
       # Cross entropy flags
-      # cross_entropy_fusion_impl: "te"
-      # cross_entropy_loss_fusion: true
+      cross_entropy_fusion_impl: "te"
+      cross_entropy_loss_fusion: true
 
       # enable fp8 training
       fp8: hybrid
