--- a/examples/megatron/configs/MI300X/deepseek_v3-FP8-pretrain.yaml
+++ b/examples/megatron/configs/MI300X/deepseek_v3-FP8-pretrain.yaml
@@ -79,8 +79,8 @@ modules:
       use_turbo_grouped_mlp: true
 
       # Cross entropy flags
-      # cross_entropy_fusion_impl: "te"
-      # cross_entropy_loss_fusion: true
+      cross_entropy_fusion_impl: "te"
+      cross_entropy_loss_fusion: true
 
       # enable fp8 training
       fp8: hybrid
