--- a/examples/megatron/configs/MI300X/llama3.1_70B-FP8-pretrain.yaml
+++ b/examples/megatron/configs/MI300X/llama3.1_70B-FP8-pretrain.yaml
@@ -76,8 +76,8 @@ modules:
       use_turbo_attention: true
 
       # Cross entropy flags
-      # cross_entropy_fusion_impl: "te"
-      # cross_entropy_loss_fusion: true
+      cross_entropy_fusion_impl: "te"
+      cross_entropy_loss_fusion: true
 
       # enable fp8 training
       fp8: hybrid
