--- a/examples/megatron/configs/MI355X/llama3.1_70B-BF16-pretrain.yaml
+++ b/examples/megatron/configs/MI355X/llama3.1_70B-BF16-pretrain.yaml
@@ -72,5 +72,5 @@ modules:
       recompute_num_layers: 80 # int
 
       # Cross entropy flags
-      # cross_entropy_fusion_impl: "te"
-      # cross_entropy_loss_fusion: true
+      cross_entropy_fusion_impl: "te"
+      cross_entropy_loss_fusion: true
