--- a/examples/megatron/configs/MI355X/llama3.1_8B-BF16-pretrain.yaml
+++ b/examples/megatron/configs/MI355X/llama3.1_8B-BF16-pretrain.yaml
@@ -67,5 +67,5 @@ modules:
       ckpt_format: torch
 
       # Cross entropy flags
-      # cross_entropy_fusion_impl: "te"
-      # cross_entropy_loss_fusion: true
+      cross_entropy_fusion_impl: "te"
+      cross_entropy_loss_fusion: true
