--- a/examples/megatron/configs/MI300X/deepseek_v2-BF16-pretrain.yaml
+++ b/examples/megatron/configs/MI300X/deepseek_v2-BF16-pretrain.yaml
@@ -95,5 +95,5 @@ modules:
       turbo_sync_free_moe_stage: 2
 
       # Cross entropy flags
-      # cross_entropy_fusion_impl: "te"
-      # cross_entropy_loss_fusion: true
+      cross_entropy_fusion_impl: "te"
+      cross_entropy_loss_fusion: true
