--- a/examples/megatron/configs/MI300X/llama3.1_70B-BF16-pretrain.yaml
+++ b/examples/megatron/configs/MI300X/llama3.1_70B-BF16-pretrain.yaml
@@ -76,5 +76,5 @@ modules:
       use_turbo_attention: true
 
       # Cross entropy flags
-      # cross_entropy_fusion_impl: "te"
-      # cross_entropy_loss_fusion: true
+      cross_entropy_fusion_impl: "te"
+      cross_entropy_loss_fusion: true
