--- a/examples/megatron/configs/MI300X/mixtral_8x22B_v0.1-FP8-pretrain.yaml
+++ b/examples/megatron/configs/MI300X/mixtral_8x22B_v0.1-FP8-pretrain.yaml
@@ -72,8 +72,8 @@ modules:
       ckpt_format: torch
 
       # Cross entropy flags
-      # cross_entropy_fusion_impl: "te"
-      # cross_entropy_loss_fusion: true
+      cross_entropy_fusion_impl: "te"
+      cross_entropy_loss_fusion: true
 
       # enable fp8 training
       fp8: hybrid
