--- a/examples/megatron/configs/MI355X/deepseek_v2-FP8-pretrain.yaml
+++ b/examples/megatron/configs/MI355X/deepseek_v2-FP8-pretrain.yaml
@@ -93,8 +93,8 @@ modules:
       turbo_sync_free_moe_stage: 1
 
       # Cross entropy flags
-      # cross_entropy_fusion_impl: "te"
-      # cross_entropy_loss_fusion: true
+      cross_entropy_fusion_impl: "te"
+      cross_entropy_loss_fusion: true
 
       # enable fp8 training
       fp8: hybrid
