--- a/examples/megatron/configs/MI355X/llama2_7B-FP8-pretrain.yaml
+++ b/examples/megatron/configs/MI355X/llama2_7B-FP8-pretrain.yaml
@@ -80,8 +80,8 @@ modules:
       # sequence_parallel: 1
 
       # Cross entropy flags
-      # cross_entropy_fusion_impl: "te"
-      # cross_entropy_loss_fusion: true
+      cross_entropy_fusion_impl: "te"
+      cross_entropy_loss_fusion: true
 
       # enable fp8 training
       fp8: hybrid
