--- a/examples/megatron/configs/MI355X/llama3.1_70B-FP8-pretrain.yaml
+++ b/examples/megatron/configs/MI355X/llama3.1_70B-FP8-pretrain.yaml
@@ -72,8 +72,8 @@ modules:
       recompute_num_layers: 80 # int
 
       # Cross entropy flags
-      # cross_entropy_fusion_impl: "te"
-      # cross_entropy_loss_fusion: true
+      cross_entropy_fusion_impl: "te"
+      cross_entropy_loss_fusion: true
 
       # enable fp8 training
       fp8: hybrid
