--- a/examples/megatron/configs/MI355X/llama3.1_8B-FP8-pretrain.yaml
+++ b/examples/megatron/configs/MI355X/llama3.1_8B-FP8-pretrain.yaml
@@ -67,8 +67,8 @@ modules:
       ckpt_format: torch
 
       # Cross entropy flags
-      # cross_entropy_fusion_impl: "te"
-      # cross_entropy_loss_fusion: true
+      cross_entropy_fusion_impl: "te"
+      cross_entropy_loss_fusion: true
 
       # enable fp8 training
       fp8: hybrid
