--- a/examples/megatron/configs/MI355X/llama3_70B-BF16-pretrain.yaml
+++ b/examples/megatron/configs/MI355X/llama3_70B-BF16-pretrain.yaml
@@ -77,5 +77,5 @@ modules:
       use_turbo_grouped_mlp: false
 
       # Cross entropy flags
-      # cross_entropy_fusion_impl: "te"
-      # cross_entropy_loss_fusion: true
+      cross_entropy_fusion_impl: "te"
+      cross_entropy_loss_fusion: true
