--- a/examples/megatron_bridge/configs/MI355X/llama2_70b_lora_posttrain.yaml
+++ b/examples/megatron_bridge/configs/MI355X/llama2_70b_lora_posttrain.yaml
@@ -48,9 +48,10 @@ modules:
       adam_eps: 1.0e-8
       weight_decay: 0.0001
       min_lr: 0.0
-      lr: 4.0e-4
+      lr: ${LR:0.0004}
       lr_warmup_iters: 0
       lr_decay_iters: null
+      clip_grad: 0.3
 
       # W&B logging
       wandb_project: null
