--- a/examples/megatron_bridge/configs/MI355X/llama2_70b_lora_posttrain.yaml
+++ b/examples/megatron_bridge/configs/MI355X/llama2_70b_lora_posttrain.yaml
@@ -64,3 +64,11 @@ modules:
 
       no_fp8_weight_transpose_cache: true
       seed: ${SEED:1234}
+
+      # tp_comm_overlap_rs: true
+      # Turbo
+      enable_primus_turbo: true
+      use_turbo_attention: false
+      # use_turbo_grouped_mlp: true
+      use_turbo_rms_norm: false
+      use_turbo_parallel_linear: false
