Edit Qwen3_32B model configs for MI300X & MI355X

--- a/primus/configs/modules/megatron_bridge/sft_trainer.yaml
+++ b/primus/configs/modules/megatron_bridge/sft_trainer.yaml
@@ -12,7 +12,7 @@ stage: "sft"
 
 
 # main control flag
-enable_primus_turbo: false
+enable_primus_turbo: true
 
 # feature control flags
 use_turbo_attention: false
